# hibiki

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  SUBTITLE_TO_EPUB_PLAN.md  UI_POLISH_PLAN.md  latest-beta.json  latest-debug.json  latest-stable.json  melos.yaml  new_tables_block.dart  run.ps1  run.sh  启动Hibiki最新版.bat  手机编译安装ARM.bat
.claude/: settings.json
.codex-test/: ui-build-files.txt
.codex-test/tools/: flutter-ui.ps1  gamepad-nav.sh  p2p-interop.ps1
.github/workflows/: build-multiplatform.yml  contributors.yml  ffmpeg-min.yml  main.yml  release-desktop.yml  release.yml
chisa/android/: build.gradle
ci/: anki-integration-test.sh  apply-patches.sh  comprehensive-test.ps1  comprehensive-test.sh  emulator-test.sh  ensure-dart-defines.sh  integration-test.sh
ci/lib/: provision-ankidroid.sh
docs/: BUGS.md  cross-platform-followup.md  index.html  ttu-fork-notes.md  user-guide.ar.md  user-guide.de.md  user-guide.es.md  user-guide.fr.md  user-guide.id.md  user-guide.it.md  user-guide.ja.md  user-guide.ko.md  user-guide.md  user-guide.nl.md  user-guide.pt-BR.md  user-guide.ru.md  user-guide.th.md  user-guide.tr.md  user-guide.vi.md  user-guide.zh-Hant.md
docs/agent/: build.md  computer-use-testing.md  external-video-open.md  integration-testing.md  reader-debugging.md  review-process.md  shortcuts-inventory.md
docs/bugs/: BUG-001.md  BUG-002.md  BUG-003.md  BUG-004.md  BUG-005.md  BUG-006.md  BUG-007.md  BUG-008.md  BUG-009.md  BUG-010.md  BUG-011.md  BUG-012.md  BUG-013.md  BUG-014.md  BUG-015.md  BUG-016.md  BUG-017.md  BUG-018.md  BUG-019.md  BUG-020.md  BUG-021.md  BUG-022.md  BUG-023.md  BUG-024.md  BUG-025.md  BUG-026.md  BUG-027.md  BUG-028.md  BUG-029.md  BUG-030.md  BUG-031.md  BUG-032.md  BUG-033.md  BUG-034.md  BUG-035.md  BUG-036.md  BUG-037.md  BUG-038.md  BUG-039.md  BUG-040.md  (+567 more)
docs/plans/: 2026-05-16-phase0-monorepo-extraction.md  2026-05-19-phase2-macos-port.md  2026-05-19-phase3-ios-port.md  2026-06-04-video-mining-phase0.md
docs/readme/: README.ar.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.id.md  README.it.md  README.ja.md  README.ko.md  README.nl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.vi.md  README.zh-Hant.md
docs/reviews/: 2026-05-15-project-review.md  2026-05-17-multiplatform-plan-review.md  2026-05-17-phase0-extraction-review.md  2026-05-17-phase1-windows-review.md  2026-05-17-project-review.md  2026-05-18-config-audit.md  2026-05-18-theme-audit.md  2026-05-19-multiplatform-readiness-audit.md  2026-05-20-matching-audit.md  2026-05-21-project-review.md  2026-05-23-md3-compliance-audit.md  2026-05-26-project-review.md  2026-05-27-project-review.md  2026-05-28-deep-quality-audit.md  2026-05-28-platform-ux-audit.md  2026-05-29-deep-quality-audit.md  2026-05-29-project-review.md  2026-05-31-project-review.md
docs/specs/: 2026-05-11-floating-dict-window-design.md  2026-05-16-multiplatform-design.md  2026-05-25-in-book-reader-settings-design.md  2026-05-29-hibiki-server-lan-wan-failover-design.md  2026-05-29-reader-layout-rootfix.md  2026-05-30-backup-import-keep-settings-design.md  2026-05-30-five-platform-build.md  2026-05-30-gamepad-reader-navigation-design.md  2026-05-30-integration-test-automation.md  2026-05-30-popup-char-caret-design.md  2026-05-30-reader-char-caret-navigation-design.md  2026-05-30-reader-char-caret-navigation-plan.md  2026-05-30-sync-backup-config-redesign-design.md  2026-05-30-sync-backup-config-redesign-plan.md  2026-05-30-test-ci-rootfix.md  2026-05-31-gamepad-long-press-plan.md  2026-05-31-gamepad-nav-phase1-plan.md  2026-05-31-gamepad-navigation-comprehensive-design.md  2026-05-31-material3-ui-architecture-plan.md  2026-05-31-popup-gamepad-navigation-plan.md  2026-06-01-comprehensive-test-automation-plan.md  2026-06-01-hibiki-remote-lookup-api-design.md  2026-06-01-settings-hierarchy-redesign-design.md  2026-06-01-settings-hierarchy-redesign-plan.md  2026-06-02-app-ui-scale-browser-zoom.md  2026-06-02-audio-sources-dialog-redesign.md  2026-06-02-desktop-settings-md3-design.md  2026-06-02-desktop-settings-md3-plan.md  (+93 more)
hibiki/: .gitignore  CLAUDE.md  analysis_options.yaml  dart_defines.env.example  dart_test.yaml  pubspec.yaml
native/hoshidicts/: CMakeLists.txt  UPSTREAM.md  hoshidicts_ffi.cpp  hoshidicts_jni.cpp  merge_ios_archives.sh
native/hoshidicts/hoshidicts_include/hoshidicts/: importer.hpp  popup_json.hpp  query.hpp
native/hoshidicts/hoshidicts_src/: importer.cpp  lookup.cpp  popup_json.cpp  query.cpp
native/hoshidicts/hoshidicts_src/json/: yomitan_parser.cpp  yomitan_parser.hpp
native/hoshidicts/hoshidicts_src/mdx/: mdx_reader.cpp
native/hoshidicts/hoshidicts_src/memory/: memory.cpp
native/hoshidicts/hoshidicts_src/scan/: word_scan.cpp  word_scan.hpp
native/hoshidicts/hoshidicts_src/stardict/: stardict_reader.cpp
native/hoshidicts/hoshidicts_src/text_processor/: kanji_standardization_data.cpp  kanji_standardization_data.h  text_processor.cpp
native/hoshidicts/hoshidicts_src/util/: fs_utf8.hpp  import_breadcrumb.hpp
native/hoshidicts/hoshidicts_src/zip/: zip.cpp  zip.hpp
native/hoshidicts/tests/: .gitignore  CMakeLists.txt  decompressor_null_guard_test.cpp  dict_name_lifetime_test.cpp  dict_name_uaf_e2e_test.cpp  freq_pitch_import_query_test.cpp  freq_pitch_merge_query_test.cpp  import_breadcrumb_test.cpp  ipa_import_query_test.cpp  kanji_import_query_test.cpp  media_import_query_test.cpp  run_all.bat  run_all.sh  run_kanji_import_query_test.bat  run_word_scan_test.bat  run_zip64_test.bat  text_processor_test.cpp  win_utf8_import_test.cpp  word_scan_test.cpp  zip64_central_dir_test.cpp  zip_fixture.hpp  zip_high_ratio_bank_test.cpp  zip_malformed_deflate_test.cpp
native/hoshidicts/tests/kanji_import_query/: CMakeLists.txt
scripts/: gh_download_stats.py
tool/: bootstrap.ps1  bootstrap.sh  bug.dart  check_release_policy.ps1  merge_update_manifest.py  publish_update_manifest.sh  run_mac_itest.ps1  setup_worktree.ps1  sync_from_mac.ps1  sync_to_mac.ps1  sync_upload_exclusions.txt
(+2433 files in other folders)
